--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -147,7 +147,8 @@ Zookeeper保证CP，设计Eureka时遵守的就是AP原则。如果某台Eureka 
 
 ## Hystrix
 
-- 为每个服务设定一个线程池或信号量将其隔离开来，防止单个依赖耗尽容器（例如 Tomcat）内所有用户线程
+- 为每个服务设定一个线程池或信号量将其隔离开来，限制其最大通过线程数，防止单个依赖耗尽Tomcat内所有用户线程。线程池隔离是用的hystrix自己的线程，而信号量隔离是用的tomcat进程直接去执行，后异步通知返回结果。
+- ![img](https://images2015.cnblogs.com/blog/978381/201705/978381-20170516093016728-916759277.png)
 - 降低系统负载，对无法及时处理的请求快速失败（fail fast）而不是排队
 
 ## Feign
