--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -6,12 +6,7 @@
 
 **分布式**：一个业务分拆多个子业务，部署在不同的服务器上
 
-**微服务**：Microservices - also known as the microservice architecture - is an architectural style that structures an application as a collection of services that are
-
-- Highly maintainable and testable
-- Loosely coupled
-- Independently deployable
-- Organized around business capabilities.
+**微服务**：
 
 ## 为什么要使用分布式
 
