--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -329,6 +329,10 @@ Kafka依赖zk，以集群方式工作，每台机器称为一个brocker，并分
 
 ![img](https://img-blog.csdn.net/20170107211358384?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvdTAxMzU3MzEzMw==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
 
+#### 推还是拉？
+
+推的话消费速度更快，但容易推的消息速度过大，造成comsumer崩溃。
+
 #### kafka需要向zookpeer配置什么内容
 
 **kafka对与zookeeper是强依赖的**，管理broker、注册topic、Zookeeper管理consumer的offset跟踪当前消费的offset。
