--- a/网络和操作系统.md
+++ b/网络和操作系统.md
@@ -239,15 +239,15 @@ https://blog.csdn.net/binggetong/article/details/52729175
 
 ## XSS攻击
 
-原因：恶意攻击者利用网站没有对用户提交数据进行转义处理或者过滤不足的缺点，进而添加一些脚本代码嵌入到web页面中去
+原因：用 <script type="text/javascript"></script> 包起来发送的回帖中
 
-预防：正则表达式过滤；
+预防：正则表达式过滤，将script关键字获取到；
 
 ## CSRF攻击
 
-CSRF攻击是攻击者利用用户的身份操作用户帐户的一种攻击方式
+通过xss创建一个自动提交的表格，冒充用户进行一些操作。
 
-预防：后端尽量使用post接口、加验证码；
+预防：请求头加token字段
 
 # 操作系统
 
