--- a/项目.md
+++ b/项目.md
@@ -1,6 +1,52 @@
-用户请求A，A查session没查到登录状态，重定向到SSO。SSO查session没查到登录状态。
+### 分布式在线考试系统
 
- 
+功能：在线答案、试卷自动对选择题打分、主观题后台打分、论坛（发帖，回帖，回复）、排行榜；
+
+技术栈
+
+使用rabbitmq：异步处理，削峰；
+
+使用redis：做缓存，排行榜；
+
+分布式事务：rocketmq、没有实际意义（每生成一份成绩，都修改试卷的已完成的人数）
+
+分布式锁：zookeeper
+
+分布式会话：nginx + redis session
+
+
+
+### 分布式在线考试系统
+
+功能：展示商品页面、下订单、付款、确认收货
+
+使用redis：做缓存（分离冷热数据，mysql商品每月售出数量字段，根据字段排序放入redis中、加上redis的数据淘汰策略）；手动更新的话的时候调用一个删缓存接口
+
+分布式事务：rocketmq：下订单的时候，库存减一
+
+
+
+### 在线聊天系统
+
+功能：在线聊天、添加好友
+
+自定义ChatHandle：用户登录，把chanelId和用户ID关联起来
+
+​									 发送信息：把聊天信息发送到对应用户id的对应chanel中去，并保存到数据库中去
+
+​									 接受信息：批量接受，将信息id用‘，’连接，一次性去查数据库；
+
+​									 心跳信息：在线的时候每隔一段时间发送，避免进入读写空闲
+
+添加好友：http请求，ajax轮询；friends中加入2条记录；
+
+四个表：user，friends，friendsRequset、ChatMsg
+
+
+
+### 单点登录
+
+用户请求A，A查session没查到登录状态，重定向到SSO。SSO查session没查到登录状态。
 
 用户登录，将token存到session（key：log in）
 
