--- a/项目.md
+++ b/项目.md
@@ -52,3 +52,20 @@
 
 用户再次请求A或B系统，重定向到SSO，通过session拿到token，后将token转发到A系统，A系统向SSO验证，成功后将token存到局部session（key：log in），后通过拦截。下一次再访问，查局部session，有则表明已登录。
 
+
+
+### 每日工作日志
+
+两张表：user，diary
+
+### 图片打名字水印系统
+
+user---project----projectUser---picStore---zipProgress
+
+用户在项目中看到的图片都是经过水印处理的（获取到多个图片的key，循环用key去服务器请求图片，服务器将图片打水印后返回数据流）；
+
+用户可以下载经过水印处理的单张图片，也可以下载包含整个项目的图片的压缩包
+
+先从progress中根据userid和projectid获取创建时间大于project最后更新的时间，则直接获得key去服务器下载。
+
+如果不存在则开辟一个新的线程，完成后将progress设置为finished，用户此时可以拿到s3服务器的key，则可以下载。
