--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -305,7 +305,7 @@ direct(默认)，fanout, topic, 和headers
 
 #### 如何确保消息不丢失
 
-![rabbitmq-message-lose-solution](https://github.com/doocs/advanced-java/raw/master/images/rabbitmq-message-lose-solution.png)
+![img](https://raw.githubusercontent.com/doocs/advanced-java/master/images/rabbitmq-message-lose-solution.png)
 
 #### 保证幂等性（不被重复消费）
 
