--- a/项目.md
+++ b/项目.md
@@ -1,4 +1,8 @@
-### 分布式在线考试系统
+自我介绍：面试官您好，很感谢能得到这次的面试机会，我叫曾子洋，我是广东工业大学2020届的学生。我有过3段在校期间的项目经历：在线考试系统，仿天猫商城以及在线好友聊天系统。这几个月时间，我有幸去到了网易和华为实习。在网易期间我也做过2个项目：日志工时记录系统，图片打名字水印系统。我的自我介绍完了，十分感谢你能从百忙中来进行面试。
+
+
+
+### 在线考试系统
 
 功能：在线答案、试卷自动对选择题打分、主观题后台打分、论坛（发帖，回帖，回复）、排行榜；
 
@@ -16,7 +20,7 @@
 
 
 
-### 分布式在线考试系统
+### 天猫商城
 
 功能：展示商品页面、下订单、付款、确认收货
 
