--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -244,9 +244,32 @@ spring session + redis
 
 ## 分布式一致性协议
 
-paxos：多个proposer发请提议[id,value]，acceptor接受最新id的提议并把之前保留的提议相应给properser。当超过半数的accetor返回某个提议给对应的properser，propeser认为可以接受该提议，于是广播给每个acceptor，acceptor发现该提议和自己保存的一致，于是接受该提议并且learner同步该提议。
+### 2pc
 
-raft：Follower A 等待一个随机的竞选超时时间之后，变成竞选者，发送投票给其他节点，超过半数回复后变成Leader，之后 Leader 会周期性地发送心跳包给 Follower，Follower 接收到心跳包，会重新开始计时。
+![clipboard.png](https://segmentfault.com/img/bVsWcs)
+
+优点：原理简单、实现方便
+缺点：同步阻塞、单点问题、数据不一致
+
+### 3pc
+
+- A、CanCommit
+  协调者向各参与者发送preCommit请求，并进入prepared阶段
+- B、PreCommit
+  参与者接收到preCommit请求后，会执行事务操作，并将Undo和Redo信息记录到事务日记中
+- C、DoCommit
+  如果各参与者都成功执行了事务操作，那么反馈给协调者Ack响应，同时等待最终指令，提交commit或者终止abort
+
+优点：降低参与者阻塞范围，并能够在出现单点故障后继续达成一致
+缺点：数据不一致
+
+### paxos
+
+多个proposer发请提议[id,value]，acceptor接受最新id的提议并把之前保留的提议相应给properser。当超过半数的accetor返回某个提议给对应的properser，propeser认为可以接受该提议，于是广播给每个acceptor，acceptor发现该提议和自己保存的一致，于是接受该提议并且learner同步该提议。
+
+### raft
+
+Follower A 等待一个随机的竞选超时时间之后，变成竞选者，发送投票给其他节点，超过半数回复后变成Leader，之后 Leader 会周期性地发送心跳包给 Follower，Follower 接收到心跳包，会重新开始计时。
 
 ## 缓存一致性
 
