--- a/项目.md
+++ b/项目.md
@@ -1,6 +1,16 @@
 自我介绍：面试官您好，很感谢能得到这次的面试机会，我叫曾子洋，我是广东工业大学2020届的学生。我有过3段在校期间的项目经历：在线考试系统，仿天猫商城以及在线好友聊天系统。这几个月时间，我有幸去到了网易和华为实习。在网易期间我也做过2个项目：日志工时记录系统，图片打名字水印系统。我的自我介绍完了，十分感谢你能从百忙中来进行面试。
 
+- 项目的目的
 
+  > 项目的意义是什么，为什么很重要，具体的目的是要完成哪些东西，达到什么样的效果
+
+- 项目架构
+
+  > 做技术的，当然还是要说技术，从架构说起，大概分那几部分，每个部分完成什么样的功能，技术上选择的语言，平台，通讯协议
+
+- 你的贡献
+
+  > 谈谈自己做了些啥，这个在面试的时候很重要:-)，主要是条理性要好，完成了哪些模块，采用什么样的具体技术，碰到了哪些苦难，如何解决的，等等，能说出一些数字往往比较靠谱
 
 ### 在线考试系统
 
