--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -276,9 +276,13 @@ Follower A 等待一个随机的竞选超时时间之后，变成竞选者，发
 - 读的时候，先读缓存，缓存没有的话，就读数据库，然后取出数据后放入缓存，同时返回响应。
 - 更新的时候，**先更新数据库，然后再删除缓存**。
 
-#### 为什么要删除缓存而不是更新缓存？
+##### 假设这会有两个请求，一个请求A做查询操作，一个请求B做更新操作
 
-假如增删改100次后，则更新了100次，而删除缓存则只删除了一次。
+采用异步延时删除策略，或者是查完数据库再检测一次缓存是否有数据
+
+## 缓存预热
+
+![image-20181023115333275](http://www.forwardlee.com/2018/07/22/Storm%E5%AE%9E%E7%8E%B0%E5%AF%B9Openresty%E4%B8%8A%E6%8A%A5%E7%BB%99Redis%E7%9A%84%E7%83%AD%E7%82%B9%E6%95%B0%E6%8D%AE%E8%BF%9B%E8%A1%8C%E5%AE%9E%E6%97%B6%E5%88%86%E6%9E%90/image-20181023115333275.png)
 
 # RabbitMq
 
