--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -165,15 +165,7 @@ zuul是对外暴露的唯一接口相当于路由的是controller的请求，而
 
 ## Config
 
-简单来说，使用Spring Cloud Config就是将配置文件放到统一的位置管理(比如GitHub)，客户端通过接口去获取这些配置文件。
-
-## Bus
-
-当git文件更改的时候，通过pc端用post 向端口为8882的config-client发送请求/bus/refresh／；此时8882端口会发送一个消息，由消息总线向其他服务传递，从而使整个微服务集群都达到更新配置文件。
-
-## Hystrix Dashboard
-
-Hystrix还提供了近实时的监控，Hystrix会实时、累加地记录所有关于HystrixCommand的执行信息，包括每秒执行多少请求多少成功，多少失败等。 
+简单来说，使用Spring Cloud Config就是将配置文件放到统一的位置管理(比如GitHub)，客户端通过接口去获取这些配置文件。 
 
 ## SpringCloud和Dubbo的区别：
 
@@ -248,8 +240,9 @@ spring session + redis
 
 ![clipboard.png](https://segmentfault.com/img/bVsWcs)
 
-优点：原理简单、实现方便
-缺点：同步阻塞、单点问题、数据不一致
+- **同步阻塞问题**。执行过程中，所有参与节点都是事务阻塞型的。当参与者占有公共资源时，其他第三方节点访问公共资源不得不处于阻塞状态。
+- **单点故障**。由于协调者的重要性，一旦协调者发生故障。参与者会一直阻塞下去。尤其在第二阶段，协调者发生故障，那么所有的参与者还都处于锁定事务资源的状态中，而无法继续完成事务操作。
+- **数据不一致**。在二阶段提交的阶段二中，当协调者向参与者发送commit请求之后，发生了局部网络异常或者在发送commit请求过程中协调者发生了故障，这回导致只有一部分参与者接受到了commit请求。而在这部分参与者接到commit请求之后就会执行commit操作。但是其他部分未接到commit请求的机器则无法执行事务提交。于是整个分布式系统便出现了数据部一致性的现象。
 
 ### 3pc
 
@@ -260,8 +253,9 @@ spring session + redis
 - C、DoCommit
   如果各参与者都成功执行了事务操作，那么反馈给协调者Ack响应，同时等待最终指令，提交commit或者终止abort
 
-优点：降低参与者阻塞范围，并能够在出现单点故障后继续达成一致
-缺点：数据不一致
+改善：3PC主要解决的单点故障问题，并减少阻塞，因为一旦参与者无法及时收到来自协调者的信息之后，他会默认执行commit。而不会一直持有事务资源并处于阻塞状态。
+
+缺点：但是这种机制也会导致数据一致性问题，因为，由于网络原因，协调者发送的abort响应没有及时被参与者接收到，那么参与者在等待超时之后执行了commit操作。
 
 ### paxos
 
@@ -270,19 +264,6 @@ spring session + redis
 ### raft
 
 Follower A 等待一个随机的竞选超时时间之后，变成竞选者，发送投票给其他节点，超过半数回复后变成Leader，之后 Leader 会周期性地发送心跳包给 Follower，Follower 接收到心跳包，会重新开始计时。
-
-## 缓存一致性
-
-- 读的时候，先读缓存，缓存没有的话，就读数据库，然后取出数据后放入缓存，同时返回响应。
-- 更新的时候，**先更新数据库，然后再删除缓存**。
-
-##### 假设这会有两个请求，一个请求A做查询操作，一个请求B做更新操作
-
-采用异步延时删除策略，或者是查完数据库再检测一次缓存是否有数据
-
-## 缓存预热
-
-![image-20181023115333275](http://www.forwardlee.com/2018/07/22/Storm%E5%AE%9E%E7%8E%B0%E5%AF%B9Openresty%E4%B8%8A%E6%8A%A5%E7%BB%99Redis%E7%9A%84%E7%83%AD%E7%82%B9%E6%95%B0%E6%8D%AE%E8%BF%9B%E8%A1%8C%E5%AE%9E%E6%97%B6%E5%88%86%E6%9E%90/image-20181023115333275.png)
 
 # RabbitMq
 
