--- a/面试算法.md
+++ b/面试算法.md
@@ -813,3 +813,47 @@ public ListNode reverseList(ListNode head) {
         quickSort(left.next, tail);
     }
 ```
+
+#### KMP
+
+```
+void SetPrefix(const char *Pattern, int prefix[]){
+     int len=CharLen(Pattern);
+     prefix[0]=0;
+     for(int i=1; i<len; i++){
+         int k=prefix[i-1];
+         while( Pattern[i] != Pattern[k]  &&  k!=0 ) 
+             k=prefix[k-1]; 
+         if( Pattern[i] == Pattern[k])
+              prefix[i]=k+1;
+         else
+              prefix[i]=0;
+     }
+}
+    public static int getIndexOf(String str1, String str2){
+        if(str1 == null || str2 == null || str2.length() < 1 || str1.length() < str2.length()){
+            return -1;
+        }
+        int p1 = 0;  // str1的指针
+        int p2 = 0;  // str2的指针
+        char[] s1 = str1.toCharArray();
+        char[] s2 = str2.toCharArray();
+        int[] next = getNextArray(s2);
+        while(p1 < str1.length() && p2 < str2.length()){
+            if(s1[p1] == s2[p2]){
+                p1++;
+                p2++;
+            }else{
+                if(next[p2] == -1){
+                    p1++;
+                }else{
+                    p2 = next[p2];
+                }
+            }
+        }
+        return p2 == s2.length ? p1 - p2 : -1;
+    }
+```
+
+![1568960867025](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\1568960867025.png)
+
