--- a/面试算法.md
+++ b/面试算法.md
@@ -857,3 +857,88 @@ void SetPrefix(const char *Pattern, int prefix[]){
 
 ![1568960867025](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\1568960867025.png)
 
+## 图
+
+```
+public class Graph {
+    // ----------------------------图的表示方式------------------------
+    private int vertexSize;// 顶点的数量
+    private int[][] matrix;// 邻接矩阵
+    private boolean[] isVisited; // 顶点是否已经被访问
+
+    public Graph(int vertexSize) {
+        this.vertexSize = vertexSize;
+        this.matrix = new int[vertexSize][vertexSize];
+        isVisited = new boolean[vertexSize];
+    }
+    public int getFirstNeighbor(int index) {
+        for (int i = 0; i < vertexSize; i++) {
+            if (matrix[index][i] > 0 && matrix[index][i] != 1000) {
+                return i;
+            }
+        }
+        return -1;
+    }
+
+    public int getNextNeighbor(int v, int index) {
+        for (int i = index + 1; i < vertexSize; i++) {
+            if (matrix[v][i] > 0 && matrix[v][i] != 1000) {
+                return i;
+            }
+        }
+        return -1;
+    }
+    // ----------------------------两个重要方法------------------------
+    // 对外提供的深度优先遍历
+    public void depthFirstSearch() {
+        for (int i = 0; i < vertexSize; i++)
+            if (!isVisited[i]) {
+                depthFirstSearch(i);
+            }
+    }
+    // 图的深度优先遍历算法 ---- 从顶点i进行遍历
+    private void depthFirstSearch(int i) {
+        isVisited[i] = true;
+        int FN = getFirstNeighbor(i);
+        while (FN != -1) {
+            if (!isVisited[FN]) {
+                System.out.println("遍历到了" + FN + "顶点"); // 遍历该顶点
+                depthFirstSearch(FN);
+            }
+            FN = getNextNeighbor(i, FN);
+        }
+    }
+
+    // 对外提供的广度优先遍历
+    public void broadFirstSearch() {
+        for (int i = 0; i < vertexSize; i++)
+            if (!isVisited[i]) {
+                broadFirstSearch(i);
+            }
+    }
+
+    private void broadFirstSearch(int i) {
+        Queue<Integer> queue = new LinkedList<>();
+        queue.add(i);
+        isVisited[i] = true; // 标记该顶点已经被遍历过
+        System.out.println("遍历到了" + i + "顶点");
+        while (!queue.isEmpty()) {
+            // 弹出队首的元素
+            Integer head = queue.poll();
+            // 获取队首元素第一个邻接点的元素
+            int FN = getFirstNeighbor(head);
+            while (FN != -1) { // 如果有第一个邻接点
+                if (!isVisited[FN]) {// 且该邻接点没有被访问过
+                    isVisited[FN] = true;// 标记该顶点已经被遍历过
+                    System.out.println("遍历到了" + FN + "顶点");
+                    queue.add(FN); // 让FN进人队列
+                }
+                // 遍历队列首元素head基于FN的下一个元素
+                FN = getNextNeighbor(head, FN);
+            }
+        }
+
+    }
+
+}
+```
