--- a/面试算法.md
+++ b/面试算法.md
@@ -817,45 +817,39 @@ public ListNode reverseList(ListNode head) {
 #### KMP
 
 ```
-void SetPrefix(const char *Pattern, int prefix[]){
-     int len=CharLen(Pattern);
-     prefix[0]=0;
-     for(int i=1; i<len; i++){
-         int k=prefix[i-1];
-         while( Pattern[i] != Pattern[k]  &&  k!=0 ) 
-             k=prefix[k-1]; 
-         if( Pattern[i] == Pattern[k])
-              prefix[i]=k+1;
-         else
-              prefix[i]=0;
-     }
-}
-    public static int getIndexOf(String str1, String str2){
-        if(str1 == null || str2 == null || str2.length() < 1 || str1.length() < str2.length()){
-            return -1;
-        }
-        int p1 = 0;  // str1的指针
-        int p2 = 0;  // str2的指针
-        char[] s1 = str1.toCharArray();
-        char[] s2 = str2.toCharArray();
-        int[] next = getNextArray(s2);
-        while(p1 < str1.length() && p2 < str2.length()){
-            if(s1[p1] == s2[p2]){
-                p1++;
-                p2++;
-            }else{
-                if(next[p2] == -1){
-                    p1++;
-                }else{
-                    p2 = next[p2];
+        public int strStr(String S, String T) {
+                if (T == null || T.length() == 0) return 0;
+                int[] next = getNext(T);
+                int i = 0;
+                int j = 0;
+                while (i < S.length() && j < T.length()) {
+                        if (j == -1 || S.charAt(i) == T.charAt(j)) {
+                                i++;
+                                j++;
+                        } else j = next[j];
                 }
-            }
+                if (j == T.length()) return i - j;
+                return -1;
         }
-        return p2 == s2.length ? p1 - p2 : -1;
-    }
-```
 
-![1568960867025](C:\Users\admin\AppData\Roaming\Typora\typora-user-images\1568960867025.png)
+        public int[] getNext(String str){
+                int[] next=new int[str.length()];
+                int i=1;
+                int k=-1;
+                next[0]=-1;
+                while (i<str.length()){
+                        while (k > 0 && str.charAt(i) != str.charAt(k + 1)) {
+                                k=next[k];
+                        }
+                        if (str.charAt(i) == str.charAt(k + 1)){
+                                k++;
+                        }
+                        next[i]=k;
+                        i++;
+                }
+                return next;
+        }
+```
 
 ## 图
 
