--- a/面试算法.md
+++ b/面试算法.md
@@ -132,6 +132,83 @@
         return Math.max(isBalancedDFS(root.left),isBalancedDFS(root.right))+1;
     }
 ```
+#### 二叉搜索树检验
+
+```
+public Boolean isBinarySearchTree(Node head){
+        if(head == null){
+            return true;   // 空树是二叉搜索树
+        }
+        int pre = Integer.MIN_VALUE;  // 这里最好将值设置为int类型的最小值，因为树里面第一个节点可能存的也是很小的值
+        Stack<Node> stack = new Stack<Node>();
+        // 压一绺左边界，再从最下面依次往上弹，直到遇到一个有右孩子的节点，去遍历它的右孩子
+        while(!stack.isEmpty() || head != null){
+            if(head != null){
+                while (head != null){
+                    stack.push(head.left);   // 压一绺左节点
+                    head = head.left;
+                }
+            }else{
+                // 当前节点为空，说明左边界压完了，则弹出节点（中），再处理右边界
+                head = stack.pop();  // 中
+                // 判断前一个数是否小于二叉树
+                if(pre > head.val){
+                    return false;
+                }
+                pre = head.val;
+                head = head.right;   // 右
+            }
+        }
+        return true;
+    }
+```
+
+#### 二叉搜索树转换为累加树
+
+```
+public TreeNode convertBST(TreeNode root) {
+        if(root == null){
+            return root;
+        }
+ 
+        // 逆序遍历中序遍历实现：右 --> 中 --> 左
+        convertBST(root.right);
+        // 将当前节点的中序遍历的右边节点都累加起来加到自身上面
+        root.val += count;
+        count = root.val;
+        // 遍历左子树
+        convertBST(root.left);
+        return root;
+    }
+```
+
+#### 二叉搜索树的最近公共祖先
+
+```
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if (p.val > root.val && q.val > root.val) return lowestCommonAncestor(root.right, p, q);
+        if (p.val < root.val && q.val < root.val) return lowestCommonAncestor(root.left, p, q);
+        return root;
+    }
+```
+
+#### 将有序数组转换为二叉搜索树
+
+```
+   public TreeNode sortedArrayToBST(int[] nums) {
+        if (nums.length==0) return null;
+        return sortedArrayToBST(nums,0,nums.length-1);
+    }
+    TreeNode sortedArrayToBST(int[] nums,int start,int end){
+        if (start>end) return null;
+        int mid=(start+end)/2;
+        TreeNode treeNode = new TreeNode(nums[mid]);
+        treeNode.left = sortedArrayToBST(nums,start,mid - 1);
+        treeNode.right = sortedArrayToBST(nums, mid+ 1,end);
+        return treeNode;
+    }
+```
+
 #### 二叉树最大深度
 
 ```
@@ -209,6 +286,19 @@
         }
     }
 ```
+#### 镜像二叉树
+
+```
+    public TreeNode mirrorTree(TreeNode root) {        
+        if (root == null)
+            return null;
+        TreeNode tmpNode = root.left;
+        root.left = mirrorTree(root.right);
+        root.right = mirrorTree(tmpNode);
+        return root;
+    }
+```
+
 #### 对称二叉树
 
 ```
@@ -261,22 +351,7 @@
         return root;
     }
 ```
-#### 将有序数组转换为二叉搜索树
 
-```
-   public TreeNode sortedArrayToBST(int[] nums) {
-        if (nums.length==0) return null;
-        return sortedArrayToBST(nums,0,nums.length-1);
-    }
-    TreeNode sortedArrayToBST(int[] nums,int start,int end){
-        if (start>end) return null;
-        int mid=(start+end)/2;
-        TreeNode treeNode = new TreeNode(nums[mid]);
-        treeNode.left = sortedArrayToBST(nums,start,mid - 1);
-        treeNode.right = sortedArrayToBST(nums, mid+ 1,end);
-        return treeNode;
-    }
-```
 #### 路径总和
 
 ```
@@ -357,16 +432,6 @@
         helper(root.right, depth + 1);
     }
 ```
-#### 二叉搜索树的最近公共祖先
-
-```
-    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
-        if (p.val > root.val && q.val > root.val) return lowestCommonAncestor(root.right, p, q);
-        if (p.val < root.val && q.val < root.val) return lowestCommonAncestor(root.left, p, q);
-        return root;
-    }
-```
-
 ####  左叶子之和
 
 ```
@@ -413,6 +478,29 @@
 		return doesTree1HaveTree2(node1.left, node2.left) &&
 				doesTree1HaveTree2(node1.right, node2.right);
 	}
+```
+
+#### 合并二叉树
+
+```
+    public TreeNode mergeTrees(TreeNode t1, TreeNode t2){
+        if(t1 != null && t2 != null){
+            // 分别合并左右子树
+            t1.left = mergeTrees(t1.left, t2.left);
+            t1.right = mergeTrees(t1.right, t2.right);
+            t1.val = t1.val + t2.val;
+            return t1;
+        }
+ 
+        if(t1 == null && t2 == null){
+            return null;
+        }
+        // 谁不为空直接返回谁
+        if(t1 != null){
+            return t1;
+        }else{
+            return t2;
+        }
 ```
 
 ## 排序
@@ -814,42 +902,33 @@ public ListNode reverseList(ListNode head) {
     }
 ```
 
-#### KMP
+#### 回文链表检验
 
-```
-        public int strStr(String S, String T) {
-                if (T == null || T.length() == 0) return 0;
-                int[] next = getNext(T);
-                int i = 0;
-                int j = 0;
-                while (i < S.length() && j < T.length()) {
-                        if (j == -1 || S.charAt(i) == T.charAt(j)) {
-                                i++;
-                                j++;
-                        } else j = next[j];
-                }
-                if (j == T.length()) return i - j;
-                return -1;
+    public boolean isPalindromList1(Node head){
+     
+       if(head == null || head.next == null){
+           return true;  // 没有节点或者只有一个节点时，肯定是回文链表
+       }
+     
+        Node cur = head;
+     
+        Stack<Node> stack = new Stack<Node>();
+        // 遍历链表，将链表元素从头开始依次亚入栈中
+        while(cur != null){
+            stack.push(cur);
+            cur = cur.next;
         }
-
-        public int[] getNext(String str){
-                int[] next=new int[str.length()];
-                int i=1;
-                int k=-1;
-                next[0]=-1;
-                while (i<str.length()){
-                        while (k > 0 && str.charAt(i) != str.charAt(k + 1)) {
-                                k=next[k];
-                        }
-                        if (str.charAt(i) == str.charAt(k + 1)){
-                                k++;
-                        }
-                        next[i]=k;
-                        i++;
-                }
-                return next;
+     
+        // 开始比对栈中依次弹出的元素与链表从头开始遍历的元素是否都相等
+        cur = head;
+        while(cur != null){
+            if(stack.pop() != cur){
+                return false;
+            }
+            cur = cur.next;
         }
-```
+        return true;
+    }
 
 ## 图
 
@@ -931,8 +1010,47 @@ public class Graph {
                 FN = getNextNeighbor(head, FN);
             }
         }
-
     }
-
 }
+```
+
+
+
+
+
+#### KMP
+
+```
+        public int strStr(String S, String T) {
+                if (T == null || T.length() == 0) return 0;
+                int[] next = getNext(T);
+                int i = 0;
+                int j = 0;
+                while (i < S.length() && j < T.length()) {
+                        if (j == -1 || S.charAt(i) == T.charAt(j)) {
+                                i++;
+                                j++;
+                        } else j = next[j];
+                }
+                if (j == T.length()) return i - j;
+                return -1;
+        }
+
+        public int[] getNext(String str){
+                int[] next=new int[str.length()];
+                int i=1;
+                int k=-1;
+                next[0]=-1;
+                while (i<str.length()){
+                        while (k > 0 && str.charAt(i) != str.charAt(k + 1)) {
+                                k=next[k];
+                        }
+                        if (str.charAt(i) == str.charAt(k + 1)){
+                                k++;
+                        }
+                        next[i]=k;
+                        i++;
+                }
+                return next;
+        }
 ```
