--- a/项目.md
+++ b/项目.md
@@ -88,6 +88,8 @@ user---project----projectUser---picStore---zipProgress
 
 ## 技术指标
 
+分布式数据库主键策略：https://tech.meituan.com/2017/04/21/mt-leaf.html
+
 说一下一些技术指标的计算过程可以作为其他同学的参考
 
 - **QPS，** 如果是5万日活，使用集中在每天的4小时，每个用户大概产生100的请求，那么平均下来，我们系统大概应该支撑的请求为：50000 * 100 / (4 * 60 * 60) = 350 qps/s
@@ -167,3 +169,18 @@ apache中sonar代码管理。是我们优化方案找出代码不规格的重要
 把业务底层做成SOA模块，通过分布式调用框架对外提供服务。
 
 后期进行SOA到微服务的改造都会涉及。单独做一个小的系统来运行定时任务热点数据放缓存，然后通过MQ来更新缓存日志等数据有必要可以考虑上个Mongo
+
+
+
+###  系统设计
+
+- 一天爬一千万条文章，怎么做设计？怎么并行协调？100 台服务器怎么尽可能负载均衡？ 
+- 怎么设计一个秒杀系统？怎么解决大并发？ 
+- 设计一个抢红包系统，要注意哪些点 
+- 设计一个微博社交系统，怎么更高效，索引怎么设计、提高效率，查询扫描行数，缓存设计 
+- 在 java 里手动实现一个生产者、消费者模型 
+- 设计一个视频上传的流程。表设计？文件上传服务器的原理？cdn？高qps怎么处理？上传和请求？缓存怎么加？ 
+- 有什么分布式 id 生成方法？各自的优缺点是什么？ 
+- 反羊毛怎么做？ 
+- 设计一个简单的智能家具系统，比如说加湿器和温湿度传感器关联，怎么设计？考虑哪些点？ 
+- 设计一个登陆过程。md5 的原理？可逆么？
