--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -339,11 +339,7 @@ Kafka依赖zk，以集群方式工作，每台机器称为一个brocker，并分
 
 ![è¿éåå¾çæè¿°](md\56.png)
 
-一个topic分成一个或多个partition，每个partition有多个副本分布在不同的broker中（只有leader partition会接收外部请求，其他follower partition只负责同步leader数据)
-
-![img](md\57.jpg)
-
-#### 1个partition只能被1个consumer gourp内的一个comsumer拥有
+1个partition只能被1个consumer gourp内的1个comsumer拥有，1个comsumer能订阅不同的partion也能订阅不同的topic
 
 ![img](md\58.png)
 
@@ -355,40 +351,42 @@ Kafka依赖zk，以集群方式工作，每台机器称为一个brocker，并分
 
 **kafka对与zookeeper是强依赖的**，管理broker、注册topic、Zookeeper管理consumer的offset跟踪当前消费的offset。
 
-#### kafka消息交付语义
-
-- At most once: 消息可能会丢，但绝不会重复传输
-- At least once：消息绝不会丢，但可能会重复传输
-- Exactly once：每条消息肯定会被传输一次且仅传输一次
+consumer的消息位移代表了当前group对topic-partition的消费进度，consumer宕机重启后可以继续从该offset开始消费。 在kafka0.8之前，位移信息存放在zookeeper上，由于zookeeper不适合高并发的读写，新版本Kafka把位移信息当成消息，发往__consumers_offsets 这个topic所在的broker
 
 #### Kafka如何解决数据堆积
 
-加partion，加consumer gourp；
+如果应用需要读取全量消息，那么请为该应用设置一个消费组；
+
+如果该应用消费能力不足，那么可以考虑在这个消费组里增加消费者。
 
 #### Kafka集群Leader选举原理
 
-我们知道Zookeeper集群中也有选举机制，是通过Paxos算法，通过不同节点向其他节点发送信息来投票选举出leader，但是Kafka的leader的选举就没有这么复杂了。 
-Kafka的Leader选举是通过在zookeeper上创建/controller临时节点来实现leader选举，并在该节点中写入当前broker的信息 
-{“version”:1,”brokerid”:1,”timestamp”:”1512018424988”} 
-利用Zookeeper的强一致性特性，一个节点只能被一个客户端创建成功，创建成功的broker即为leader，即先到先得原则，leader也就是集群中的controller，负责集群中所有大小事务。 
-
-当leader和zookeeper失去连接时，临时节点会删除，而其他broker会监听该节点的变化，当节点删除时，其他broker会收到事件通知，重新发起leader选举。
+Kafka的Leader选举是通过在zookeeper上创建/controller临时节点来实现leader选举，并在该节点中写入当前broker的信息 ：{“version”:1,”brokerid”:1,”timestamp”:”1512018424988”} 
+利用Zookeeper的强一致性特性，一个节点只能被一个客户端创建成功，创建成功的broker即为leader，即先到先得原则，leader也就是集群中的controller，负责集群中所有大小事务。
 
 #### 如何确保消息不丢失
 
-设置acks=all：
+生产者设置acks=all，注册回调函数。
 
-写完后再回传一个ack信息；
+关闭 Kafka的自动提交offset，处理完毕再commit，保证commit的消息一定被处理完毕
 
-~~
+#### 如何避免消息重复消费？
 
-关闭 Kafka的自动提交offset：
+kafka不能避免重复消费，能保证之前消费一次，需要消费者自己做检验。
 
-等处理完了再手动提交；
+将offset写入redis中去，建立去重表。
 
 #### 如何保证消息的顺序性？
 
-![kafka-order-02](md\59.png)
+生产者生产消息只发到一个partation ，单partation有序，多partation无序，Kafka 只会保证在 Partition 内消息是有序的，而不管全局的情况。
+
+#### Rebalance过程分析
+
+Rebalance 过程分为两步：Join 和 Sync。
+
+1.Join ：这一步中，所有成员都向coordinator发送JoinGroup请求。一旦所有成员都发送了JoinGroup请求，coordinator会从中选择一个consumer担任leader的角色，并把组成员信息以及订阅信息发给leader。
+
+2.Sync，这一步leader开始分配消费方案，即哪个consumer负责消费哪些topic的哪些partition。一旦完成分配，leader会将这个方案封装进SyncGroup请求中发给coordinator。
 
 #### 和RabbitMq对比：
 
@@ -415,6 +413,19 @@ Nginx的IO通常使用epoll，epoll函数使用了I/O复用模型。与I/O阻塞
 2.当一个client连接到来时，所有accept的work进程都会受到通知，但只有一个进程可以accept成功，其它的则会accept失败，Nginx提供了一把共享锁accept_mutex来保证同一时刻只有一个work进程在accept连接，从而解决惊群问题
 
 3.当一个worker进程accept这个连接后，就开始读取请求，解析请求，处理请求，产生数据后，再返回给客户端，最后才断开连接，这样一个完成的请求就结束了
+
+## Maven
+
+mvn clean package依次执行了clean、resources、compile、testResources、testCompile、test、jar(打包)等７个阶段。
+mvn clean install依次执行了clean、resources、compile、testResources、testCompile、test、jar(打包)、install等8个阶段。
+mvn clean deploy依次执行了clean、resources、compile、testResources、testCompile、test、jar(打包)、install、deploy等９个阶段。
+
+主要区别如下:
+package命令完成了项目编译、单元测试、打包功能，但没有把打好的可执行jar包（war包或其它形式的包）布署到本地maven仓库和远程maven私服仓库
+
+install命令完成了项目编译、单元测试、打包功能，同时把打好的可执行jar包（war包或其它形式的包）布署到本地maven仓库，但没有布署到远程maven私服仓库
+
+deploy命令完成了项目编译、单元测试、打包功能，同时把打好的可执行jar包（war包或其它形式的包）布署到本地maven仓库和远程maven私服仓库.
 
 # 海量数据处理
 
