--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -150,10 +150,6 @@ Zookeeper保证CP，设计Eureka时遵守的就是AP原则。如果某台Eureka 
 - ![img](md\48.png)
 - 降低系统负载，对无法及时处理的请求快速失败（fail fast）而不是排队
 
-## Feign
-
-整合了 Spring Cloud Ribbon 与 Spring Cloud Hystrix, 除了整合这两者的强大功能之外，它还提 供了声明式的服务调用(不再通过RestTemplate)。
-
 ## Zuul
 
 外层调用都必须通过API网关，使得将维护服务实例的工作交给了服务治理框架自动完成。
@@ -307,6 +303,10 @@ direct(默认)，fanout, topic, 和headers
 
 镜像集群：主从架构；
 
+#### CMQ集群
+
+CMQ中，主要是实现主从集群。Raft 协议强依赖 Leader 节点的可用性来确保集群数据的一致性。数据的流向只能从Leader 节点向 Follower 节点转移。
+
 #### rabbitmq 每个节点是其他节点的完整拷贝吗？为什么？
 
 普通集群则不是；镜像集群是；
@@ -324,6 +324,10 @@ direct(默认)，fanout, topic, 和headers
 #### 如何保证消息的顺序性？
 
 ![rabbitmq-order-02](md\55.png)
+
+#### 如何防止处理过程中异常而导致的消息丢失？
+
+消费者拉取消息时会指定当前消息的隐藏时间，在隐藏时 间内消费者需要显式的对消息进行确认删除（ACK），消息才会真真的被删除。如果超过隐藏时间没有主动删除， 此条消息将重新对外可见，可以继续消费
 
 # Kafka
 
