--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -351,15 +351,15 @@ Kafka依赖zk，以集群方式工作，每台机器称为一个brocker，并分
 Kafka的Leader选举是通过在zookeeper上创建/controller临时节点来实现leader选举，并在该节点中写入当前broker的信息 ：{“version”:1,”brokerid”:1,”timestamp”:”1512018424988”} 
 利用Zookeeper的强一致性特性，一个节点只能被一个客户端创建成功，创建成功的broker即为leader，即先到先得原则，leader也就是集群中的controller，负责集群中所有大小事务。
 
-#### Rebalance过程分析（partion分配给consumer的过程）
+#### kafka一致性保证
 
-Rebalance 过程分为两步：Join 和 Sync。
+Kafka通过replica.lag.max.messages和replica.lag.time.max.ms两个参数来度量Follower同步的情况。其中replica.lag.max.messages用于配置Follower可落后的最大消息数量，replica.lag.time.max.ms用于配置Follower和Leader通信的最大时延。超过后会被踢出ISR，直到追上后加回到ISR列表
 
-1.Join ：这一步中，所有成员都向coordinator发送JoinGroup请求。一旦所有成员都发送了JoinGroup请求，coordinator会从中选择一个consumer担任leader的角色，并把组成员信息以及订阅信息发给leader。
+#### offset保存策略
 
-2.Sync，这一步leader开始分配消费方案，即哪个consumer负责消费哪些topic的哪些partition。一旦完成分配，leader会将这个方案封装进SyncGroup请求中发给coordinator。
+使用zookeeper来维护offset，kafka 0.9 以前的版本是将offset 存储在zookeeper上的。kafka 0.9 以后，offset的使用了内部的roker来管理。
 
-#### Rebalance分配策略
+#### Rebalance分配策略（partion分配给consumer的过程）
 
 1、轮询的方式分配所有的分区
 
