--- a/项目.md
+++ b/项目.md
@@ -1,178 +1,4 @@
-自我介绍：面试官您好，很感谢能得到这次的面试机会，我叫曾子洋，我是广东工业大学2020届的学生。我有过3段在校期间的项目经历：在线考试系统，仿天猫商城以及在线好友聊天系统。这几个月时间，我有幸去到了网易和华为实习。在网易期间我也做过2个项目：日志工时记录系统，图片打名字水印系统。我的自我介绍完了，十分感谢你能从百忙中来进行面试。
-
-- 项目的目的
-
-  > 项目的意义是什么，为什么很重要，具体的目的是要完成哪些东西，达到什么样的效果
-
-- 项目架构
-
-  > 做技术的，当然还是要说技术，从架构说起，大概分那几部分，每个部分完成什么样的功能，技术上选择的语言，平台，通讯协议
-
-- 你的贡献
-
-  > 谈谈自己做了些啥，这个在面试的时候很重要:-)，主要是条理性要好，完成了哪些模块，采用什么样的具体技术，碰到了哪些苦难，如何解决的，等等，能说出一些数字往往比较靠谱
-
-### 在线考试系统
-
-功能：在线答案、试卷自动对选择题打分、主观题后台打分、论坛（发帖，回帖，回复）、排行榜；
-
-技术栈
-
-使用rabbitmq：异步处理，削峰(提交试卷)；
-
-使用redis：做缓存，排行榜；
-
-分布式事务：rocketmq、没有实际意义（每生成一份成绩，都修改试卷的已完成的人数）
-
-分布式锁：zookeeper
-
-分布式会话：nginx + redis session
-
-![“springcloud架构图”的图片搜索结果](md\78.png)
-
-### 天猫商城
-
-功能：展示商品页面、下订单、付款、确认收货
-
-使用redis：做缓存（分离冷热数据，mysql商品每月售出数量字段，根据字段排序放入redis中、加上redis的数据淘汰策略）；手动更新的话的时候调用一个删缓存接口
-
-分布式事务：rocketmq：下订单的时候，库存减一
-
-
-
-### 在线聊天系统
-
-功能：在线聊天、添加好友
-
-自定义ChatHandle：用户登录，把chanelId和用户ID关联起来
-
-​									 发送信息：把聊天信息发送到对应用户id的对应chanel中去，并保存到数据库中去
-
-​									 接受信息：批量接受，将信息id用‘，’连接，一次性去查数据库；
-
-​									 心跳信息：在线的时候每隔一段时间发送，避免进入读写空闲
-
-添加好友：http请求，ajax轮询；friends中加入2条记录；
-
-四个表：user，friends，friendsRequset、ChatMsg
-
-
-
-### 单点登录
-
-用户请求A，A查session没查到登录状态，重定向到SSO。SSO查session没查到登录状态。
-
-用户登录，将token存到session（key：log in）
-
-用户再次请求A或B系统，重定向到SSO，通过session拿到token，后将token转发到A系统，A系统向SSO验证，成功后将token存到局部session（key：log in），后通过拦截。下一次再访问，查局部session，有则表明已登录。
-
-
-
-### 每日工作日志
-
-两张表：user，diary
-
-### 图片打名字水印系统
-
-user---project----projectUser---picStore---zipProgress
-
-用户在项目中看到的图片都是经过水印处理的（获取到多个图片的key，循环用key去服务器请求图片，服务器将图片打水印后返回数据流）；
-
-用户可以下载经过水印处理的单张图片，也可以下载包含整个项目的图片的压缩包
-
-先从progress中根据userid和projectid获取创建时间大于project最后更新的时间，则直接获得key去服务器下载。
-
-如果不存在则开辟一个新的线程，完成后将progress设置为finished，用户此时可以拿到s3服务器的key，则可以下载。
-
-
-
-## 技术指标
-
-分布式数据库主键策略：https://tech.meituan.com/2017/04/21/mt-leaf.html
-
-说一下一些技术指标的计算过程可以作为其他同学的参考
-
-- **QPS，** 如果是5万日活，使用集中在每天的4小时，每个用户大概产生100的请求，那么平均下来，我们系统大概应该支撑的请求为：50000 * 100 / (4 * 60 * 60) = 350 qps/s
-- **业务数据 业务量，**我们自己是新闻业务，可能会有其他的业务，比如游戏，商城等等，基本每天新增的业务数据都会在同一个量级， 每日10000， 另外跟用户相关的信息也是比较大的一块，比如用户的订阅等行为，一共5万的用户，保存相关信息可能大概需要100条的数据。
-- **缓存大小** 主要业务数据和用户相关的热点数据限时保存在缓存中， 大概需要5个G左右。
-- **日志大小** 用户日志和请求日志。大概每天3个G左右
-
-
-
-这些数据需要运维人员的估算，
-
-## 技术架构
-
-![img](md\79.jpg)
-
-> 我们基于阿里云来搭建，对图中的内容和技术选型进行一下说明：
-
-### 负载均衡
-
-可选方案：SLB, Nginx.
-
-- SLB要收钱，但是比较便宜，有保证，不会挂。但是可配置的很少，不能根据域名做ip映射
-- Nginx, 没啥缺点，需要一定的知识。建议：SLB + Nginx, SLB绑定域名作为统一的入口，然后每个服务器上再搭建Nginx.
-
-
-
-建议：SLB + Nginx, SLB绑定域名作为统一的入口，然后每个服务器上再搭建Nginx.
-
-### CDN
-
-用于缓存静态文件等等。七牛和阿里的都还可以。
-
-- 七牛要做的久一点， 各种图片处理的接口要完善一些
-- 阿里的CDN要稍微好一点点， 但是没有不安全的访问方式，访问稍微没有那么灵活。图片处理功能弱一点。
-- 是解决前端延迟的好办法
-
-### 分布式调用框架
-
-目前可选的有ZK + dubbo. ZK + Motan, ZK + dubbox, edas。
-
-- dubbo, 阿里的服务治理框架，已经不维护了，切换反应有点慢
-- dubboX, 当当基于dubbo搞的，还在维护可以一用，推荐。
-- Motan, 微博的服务治理矿建， 刚开源，需要学习一下， 推荐。
-- Edas, 阿里云服务，要收钱，侵入型很强，不推荐
-
-### MQ
-
-可选的有：ActiveMQ, rocketMQ， robbitMQ,Kafka各有好处， 但是考虑到运维的难度，推荐rocketMQ。
-
-### Redis
-
-用来做缓存， 自建成本有点高，需要Codis, 分片，集群，主从等等，很麻烦。建议直接用阿里的
-
-也可以用来处理分布式的数据共享session的工具、
-
-### 数据库
-
-主要基于读写分离和主从复制考虑，目前可以自建和选用阿里的DRDS。
-
-- DRDS 要花钱，成本较高，没有必要
-- 自建， 不用中间件，直接1写2只读， 然后配置读写分离的数据源，内网SLB进行读集群。解决之。
-
-### 搜索
-
-apache solr 搜索引擎。相比其他用起来还可以。
-
-建议ELK， 可以自动同步数据库，除了搜索引擎的功能外，还可以做日志搜索，监控系统。
-
-### 代码管理工具
-
-Jenkins 与 Sonar 集成是代码管理工具重要体现。
-
-apache中sonar代码管理。是我们优化方案找出代码不规格的重要工具、Jenkins是我们打包发布重要工具。
-
-### 一些典型的业务场景说明
-
-把业务底层做成SOA模块，通过分布式调用框架对外提供服务。
-
-后期进行SOA到微服务的改造都会涉及。单独做一个小的系统来运行定时任务热点数据放缓存，然后通过MQ来更新缓存日志等数据有必要可以考虑上个Mongo
-
-
-
-###  系统设计
+系统设计
 
 - 一天爬一千万条文章，怎么做设计？怎么并行协调？100 台服务器怎么尽可能负载均衡？ 
 - 怎么设计一个秒杀系统？怎么解决大并发？ 
@@ -184,3 +10,26 @@ apache中sonar代码管理。是我们优化方案找出代码不规格的重要
 - 反羊毛怎么做？ 
 - 设计一个简单的智能家具系统，比如说加湿器和温湿度传感器关联，怎么设计？考虑哪些点？ 
 - 设计一个登陆过程。md5 的原理？可逆么？
+
+
+
+oauth2
+
+微信小程序登录流程
+
+jwt
+
+es
+
+### 单点登录
+
+用户请求A，A查session没查到登录状态，重定向到SSO。SSO查session没查到登录状态。
+
+用户登录，将token存到session（key：log in）
+
+用户再次请求A或B系统，重定向到SSO，通过session拿到token，后将token转发到A系统，A系统向SSO验证，成功后将token存到局部session（key：log in），后通过拦截。下一次再访问，查局部session，有则表明已登录。
+
+
+
+
+
