--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -154,6 +154,10 @@ Zookeeper保证CP，设计Eureka时遵守的就是AP原则。如果某台Eureka 
 
 # 分布式
 
+## 分布式和集群
+
+分布式是指将不同的业务分布在不同的地方。 而集群指的是将几台服务器集中在一起，实现同一业务。分布式中的每一个节点，都可以做集群。
+
 ## CAP理论
 
 一致性：保持各节点数据一致；
