--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -191,6 +191,11 @@ RedLock算法：
 3. 客户端计算建立好锁的时间，如果建立锁的时间小于超时时间，就算建立成功了；
 4. 要是锁建立失败了，那么就依次之前建立过的锁删除；
 5. 只要别人建立了一把分布式锁，你就得**不断轮询去尝试获取锁**。
+   
+
+redis普通锁：![](md\84.png)
+
+缺陷：master宕机前写入myLock，salve还没有同步到这把锁，就被切换成了master，另一线程也写入了myLoCK。
 
 #### zk 分布式锁：
 
