--- a/项目.md
+++ b/项目.md
@@ -29,6 +29,28 @@ es
 
 用户再次请求A或B系统，重定向到SSO，通过session拿到token，后将token转发到A系统，A系统向SSO验证，成功后将token存到局部session（key：log in），后通过拦截。下一次再访问，查局部session，有则表明已登录。
 
+## 服务熔断
+
+当下游的服务因为某种原因突然变得不可用或响应过慢，上游服务为了保证自己整体服务的可用性，不再继续调用目标服务，直接返回，快速释放资源。
+
+## 服务限流
+
+服务限流常见算法有并发计数器算法，漏桶算法，令牌桶算法。前两种算法不支持突发流量的限流，令牌桶算法支持突发流量的限流。…一般用谷歌 guava 落地令牌桶算法
+
+## 服务降级
+
+这个场景在双十一就能看到,为了保证秒杀，购物，支付等业务正常进行，会禁用一些服务，降低图片的清晰度等等。
+
+## 服务隔离
+
+每个服务接口之间互不影响
+
+![](C:\Users\admin\Desktop\all the web\interview-review\md\88.png)
+
+
+
+
+
 
 
 
