--- a/项目.md
+++ b/项目.md
@@ -47,7 +47,9 @@ es
 
 ![](C:\Users\admin\Desktop\all the web\interview-review\md\88.png)
 
+#### 秒杀系统的设计
 
+从渲染秒杀数据->下单防超卖整个过程中基本会涉及以下几个问题活动预算控制，个人预算控制，热点数据解决，流量限流，数据缓存方案1.渲染静态数据cdn缓存，动态数据多级缓存，避免流量通往DB，造成雪崩2.库存用redis做原子计算，个人预算通过用户key缓存redis检验3.热点数据提前缓存，梳理秒杀数据涉及表结构数据4.根据算法将大部分无限流量抛弃5.库存更新做乐观锁防止超卖6.逆向过程中，库存回补7.数据一致性监控......
 
 
 
