--- a/项目.md
+++ b/项目.md
@@ -53,6 +53,10 @@ es
 
 
 
+可以用redis的链表来实现，假如这个商品有100件，可以事先往链表里面写入100个元素。当用户来下单的时候，可以把该商品所对应的缓存数据进行挨个删除，因为redis的链表的增删是具有原子性的，每次只能进行一次操作。当秒杀结束时，把缓存中的订单信息取出来，更新到mysql中就行。
+
+
+
 
 
 
