--- a/面试算法2.md
+++ b/面试算法2.md
@@ -143,6 +143,10 @@
 
 225用队列实现栈  
 
+阻塞队列的实现方式
+
+有界队列实现方式
+
 用栈实现队列
 
 208实现 Trie (前缀树)  
@@ -156,6 +160,8 @@
 981基于时间的键值存储  
 
 手写一个简单的 HashMap【手撕】
+
+手写死锁
 
 ## Hashmap比较
 
@@ -303,9 +309,9 @@
 
 28实现 strStr()  
 
-## DP 股票
+## 并查集
 
-买卖股票的最佳时机  1+2+3+4
+547.朋友圈
 
 ## 基本DP
 
@@ -329,19 +335,13 @@
 
 128最长连续序列  
 
-152乘积最大子数组  
-
-139单词拆分  
+152乘积最大子数组    
 
 174地下城游戏  
-
-198打家劫舍  
 
 221最大正方形  
 
 256粉刷房子  
-
-300最长上升子序列 
 
 剪绳子：剪成 m 段，最大乘积问题【剑指Offer】
 
@@ -349,7 +349,7 @@
 
 最经典单串：
 
-[300. 最长上升子序列](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/longest-increasing-subsequence/) (LIS)
+300. 最长上升子序列
 
 最经典双串：
 
@@ -357,171 +357,97 @@
 
 字符串的最长公共子串和最长公共子序列
 
-[1143. 最长公共子序列](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/longest-common-subsequence/) (LCS)
+1143. 最长公共子序列
 
 **经典问题：**
 
-[120. 三角形最小路径和](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/triangle/)
+120. 三角形最小路径和
+53. 最大子序和
 
-[53. 最大子序和](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/maximum-subarray/)
+152. 乘积最大子数组
 
-[152. 乘积最大子数组](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/maximum-product-subarray/)
+887. 鸡蛋掉落
 
-[887. 鸡蛋掉落](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/super-egg-drop/) (DP+二分)
-
-[354. 俄罗斯套娃信封问题](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/russian-doll-envelopes/) (隐晦的LIS)
+354. 俄罗斯套娃信封问题
 
 **打家劫舍系列: (打家劫舍3 是树形DP)**
 
-[198. 打家劫舍](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/house-robber/)
+198. 打家劫舍
 
-[213. 打家劫舍 II](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/house-robber-ii/)
+213. 打家劫舍 II
 
 **股票系列:**
 
-[121. 买卖股票的最佳时机](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/)
+121. 买卖股票的最佳时机
 
-[122. 买卖股票的最佳时机 II](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii/)
+122. 买卖股票的最佳时机 II
 
-[123. 买卖股票的最佳时机 III](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/)
+123. 买卖股票的最佳时机 III
 
-[188. 买卖股票的最佳时机 IV](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iv/)
+188. 买卖股票的最佳时机 IV
 
-[309. 最佳买卖股票时机含冷冻期](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/)
+309. 最佳买卖股票时机含冷冻期
 
-[714. 买卖股票的最佳时机含手续费](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-transaction-fee/)
+714. 买卖股票的最佳时机含手续费
 
 **字符串匹配系列**
 
-[72. 编辑距离](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/edit-distance/)
+72. 编辑距离
 
-[44. 通配符匹配](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/wildcard-matching/)
+44. 通配符匹配
 
-[10. 正则表达式匹配](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/regular-expression-matching/)
+10. 正则表达式匹配
+
+139单词拆分
 
 ### **2. 区间DP**
 
-[516. 最长回文子序列](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/longest-palindromic-subsequence/)
+516. 最长回文子序列
 
-[730. 统计不同回文子字符串](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/count-different-palindromic-subsequences/)
+730. 统计不同回文子字符串
 
-[1039. 多边形三角剖分的最低得分](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/minimum-score-triangulation-of-polygon/)
-
-[664. 奇怪的打印机](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/strange-printer/)
-
-[312. 戳气球](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/burst-balloons/)
+312. 戳气球
 
 ### **3. 背包DP**
 
-[416. 分割等和子集](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/partition-equal-subset-sum/) (01背包-要求恰好取到背包容量)
+416. 分割等和子集
 
-[494. 目标和](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/target-sum/) (01背包-求方案数)
+494. 目标和
 
-[322. 零钱兑换](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/coin-change/) (完全背包)
+322. 零钱兑换
 
-[518. 零钱兑换 II](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/coin-change-2/) (完全背包-求方案数)
+518. 零钱兑换 II
 
-[474. 一和零](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/ones-and-zeroes/) (二维费用背包)
-
+474. 一和零
 ### **4. 树形DP**
 
-[124. 二叉树中的最大路径和](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/binary-tree-maximum-path-sum/)
+124. 二叉树中的最大路径和
 
-[1245. 树的直径](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/tree-diameter/) (**邻接表上的树形DP**)
+1245. 树的直径
 
-[543. 二叉树的直径](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/diameter-of-binary-tree/)
+543. 二叉树的直径
 
-[333. 最大 BST 子树](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/largest-bst-subtree/)
+333. 最大 BST 子树
 
-[337. 打家劫舍 III](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/house-robber-iii/)
-
-**5. 状态压缩DP**
-
-[464. 我能赢吗](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/can-i-win/)
-
-[526. 优美的排列](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/beautiful-arrangement/)
-
-[935. 骑士拨号器](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/knight-dialer/)
-
-[1349. 参加考试的最大学生数](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/maximum-students-taking-exam/)
+337. 打家劫舍 III
 
 ### **6. 数位DP**
 
-[233. 数字 1 的个数](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/number-of-digit-one/)
+233. 数字 1 的个数
 
-[902. 最大为 N 的数字组合](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/numbers-at-most-n-given-digit-set/)
+902. 最大为 N 的数字组合
 
-[1015. 可被 K 整除的最小整数](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/smallest-integer-divisible-by-k/)
-
-### **7. 计数型DP**
-
-**计数型DP都可以以组合数学的方法写出组合数，然后dp求组合数**
-
-[62. 不同路径](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/unique-paths/)
-
-[63. 不同路径 II](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/unique-paths-ii/)
-
-[96. 不同的二叉搜索树](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/unique-binary-search-trees/) (**卡特兰数**)
-
-[1259. 不相交的握手](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/handshakes-that-dont-cross/) (**卢卡斯定理**求大组合数模质数)
+1015. 可被 K 整除的最小整数
 
 ### **8. 递推型DP**
 
 **所有线性递推关系都可以用矩阵快速幂做，可以O(logN)，最典型是斐波那契数列**
 
-[70. 爬楼梯](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/climbing-stairs/)
+70. 爬楼梯
 
-[509. 斐波那契数](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/fibonacci-number/)
+509. 斐波那契数
 
-[935. 骑士拨号器](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/knight-dialer/)
-
-[957. N 天后的牢房](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/prison-cells-after-n-days/)
-
-[1137. 第 N 个泰波那契数](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/n-th-tribonacci-number/)
-
-### **9. 概率型DP**
-
-**求概率，求数学期望**
-
-[808. 分汤](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/soup-servings/)
-
-[837. 新21点](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/new-21-game/)
-
-**10. 博弈型DP**
-
-**策梅洛定理，SG定理，minimax**
-
-翻转游戏
-
-[293. 翻转游戏](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/flip-game/)
-
-[294. 翻转游戏 II](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/flip-game-ii/)
-
-Nim游戏
-
-[292. Nim 游戏](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/nim-game/)
-
-石子游戏
-
-[877. 石子游戏](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/stone-game/)
-
-[1140. 石子游戏 II](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/stone-game-ii/)
-
-井字游戏
-
-[348. 判定井字棋胜负](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/design-tic-tac-toe/)
-
-[794. 有效的井字游戏](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/valid-tic-tac-toe-state/)
-
-[1275. 找出井字棋的获胜者](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/find-winner-on-a-tic-tac-toe-game/)
-
-### **11. 记忆化搜索**
-
-**本质是 dfs + 记忆化，用在状态的转移方向不确定的情况**
-
-[329. 矩阵中的最长递增路径](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/longest-increasing-path-in-a-matrix/)
-
-[576. 出界的路径数](https://link.zhihu.com/?target=https%3A//leetcode-cn.com/problems/out-of-boundary-paths/)
+1137. 第 N 个泰波那契数
 
 ## 交换技巧
 
@@ -602,3 +528,19 @@ n个闭区间[ai,bi]，选择尽量少的点，使得每个区间至少有一个
 4、安排最多的宣讲场次
 
 最多可以参加的会议数目
+
+
+
+
+
+4、朋友之间的点对点关系用图维护，怎么判断两人是否是朋友，并查集，时间复杂度
+
+5、单元点最短路的方法，时间复杂度
+
+6、如何实现关键字输入提示，使用字典树，复杂度多少，有没有其他方案
+
+2、100w个数，怎么找到前1000个最大的，堆[排序](https://www.nowcoder.com/jump/super-jump/word?word=排序)，怎么构造，怎么调整，时间复杂度。
+
+1、十亿个数的集合和10w个数的集合，如何求它们的交集。
+
+2、十亿和数找到前100个最大的，堆[排序](https://www.nowcoder.com/jump/super-jump/word?word=排序)，怎么实现，怎么调整。
