--- a/项目.md
+++ b/项目.md
@@ -11,15 +11,31 @@
 - 设计一个简单的智能家具系统，比如说加湿器和温湿度传感器关联，怎么设计？考虑哪些点？ 
 - 设计一个登陆过程。md5 的原理？可逆么？
 
+### 如何开展一个项目
+
+1）设计背景使用STAR法则，系统的背景、讨论细节点的情景，以及所要达到的目标，解决了哪些具体的问题，并使用分析框架来进行分析，以及要展开设计的难点以及亮点。
+
+2）技术选型上，应该使用表格来对比，并且阐述业界中常用的技术方案的对比。
+
+3）项目带来的对于个人以及团队的收益，设计的不足，以及规划。
+
+4）在PPT中应体现团队对于这个项目的一个团队记录以及分工等。
 
 
-oauth2
 
-微信小程序登录流程
+### 微信小程序登录流程
 
 jwt
 
-es
+JWT实际上只是一个规范，一个Token的规范。符合JWT规范的Token可以用于Authorization (授权)。
+
+用户首次登录，服务器会为其生成一个token，并返回给客户端。客户端接收到之后，存储下来，之后每次请求的请求头都会包含token。服务器收到请求，就会验证客户端发送过来的token。验证通过，就响应请求，否则就提示用户登录失效。
+
+**符合JWT规范的token可以用于登录授权的原因是：**
+
+- 当JWT的任一部分被修改的时候：服务器对前面两个部分进行签名，就会发现两次签名不一致
+- 那么 refresh token 换取 access token 每 24h 只要一次就好了，也就是说每天只有这一次的机会会泄漏 refresh token
+  而 access token 则会在每一次调用中都可能泄漏，泄漏几率远大于 refresh token
 
 ### 单点登录
 
