--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -124,19 +124,9 @@ SPI 全称为 Service Provider Interface，Dubbo 并未使用 Java 原生的 SPI
 
 ![clipboard.png](md\47.png)
 
-# SpringCloud
-
- *Spring Cloud* 是一套微服务治理的框架,几乎考虑到了微服务治理的方方面面。
-
 ## Eureka
 
 Zookeeper保证CP，设计Eureka时遵守的就是AP原则。如果某台Eureka Server宕机，Eureka Client的请求会自动切换到新的Eureka Server节点，当宕机的服务器重新恢复后，Eureka会再次将其纳入到服务器集群管理之中。当节点开始接受客户端请求时，所有的操作都会进行replicateToPeer（节点间复制）操作，将请求复制到其他Eureka Server当前所知的所有节点中。 
-
-## SpringCloud和Dubbo的区别：
-
-1.Spring Cloud与Dubbo天生使用的协议层面不一样,前者是HTTP,后者是TCP（netty）
-
-2.dubbo是一个rpc框架，springCloud是考虑微服务治理的方方面面。
 
 # 分布式
 
@@ -248,12 +238,20 @@ Follower A 等待一个随机的竞选超时时间之后，变成竞选者，发
 
 ## 中间件一致性策略
 
+mysql同步机制
+
+1.对于异步复制，主库将事务Binlog事件写入到Binlog文件中，此时主库只会通知一下Dump线程发送这些新的Binlog，然后主库就会继续处理提交操作，而此时不会保证这些Binlog传到任何一个从库节点上。
+2.对于全同步复制，当主库提交事务之后，所有的从库节点必须收到，APPLY并且提交这些事务，然后主库线程才能继续做后续操作。这里面有一个很明显的缺点就是，主库完成一个事务的时间被拉长，性能降低。
+3.对于半同步复制，是介于全同步复制和异步复制之间的一种，主库只需要等待至少一个从库节点（可配置）收到并且Flush Binlog到Relay Log文件即可，主库不需要等待所有从库给主库反馈。同时，这里只是一个收到的反馈，而不是已经完全执行并且提交的反馈，这样就节省了很多时间。
+
 Zookeeper的zab策略脱胎于Paxos算法，默认情况下，zk中写数据时，要有一半以上的从节点写入成功，才算是写入成功。
 redis因为是要提升性能，所以直接采用的异步复制，当在Master上写入数据后直接返回，然后把数据快照广播给Slave，让所有的Slaves去执行操作
 Rabbitmq主收到一条消息写入本地存储，然后在发起写入从的请求。当所有从写入成功后，主才会给client返回ack说这次写入成功了。
-kafka使用的是ISR，只有 High Water Mark 以上的消息才支持 Consumer 读取，同步上使用全同步机制，等全部写入后才返回成功
+kafka使用的是ISR，只有 High Water Mark 以上的消息才支持 Consumer 读取。
 
-![](md\89.png)
+- `acks=0` 如果设置为0，则 producer 不会等待服务器的反馈。该消息会被立刻添加到 socket buffer 中并认为已经发送完成。在这种情况下，服务器是否收到请求是没法保证的，并且参数`retries`也不会生效（因为客户端无法获得失败信息）。每个记录返回的 offset 总是被设置为-1。
+- `acks=1` 如果设置为1，leader节点会将记录写入本地日志，并且在所有 follower 节点反馈之前就先确认成功。在这种情况下，如果 leader 节点在接收记录之后，并且在 follower 节点复制数据完成之前产生错误，则这条记录会丢失。
+- `acks=all` 如果设置为all，这就意味着 leader 节点会等待所有同步中的副本确认之后再确认这条记录是否发送完成。只要至少有一个同步副本存在，记录就不会丢失。这种方式是对请求传递的最有效保证。acks=-1与acks=all是等效的。
 
 更少的可容错副本数量。raft当有1/3个节点数目不可用时，服务不可用，kafka中维护的ISR（in-sync-replica），即便副本均不可用，只剩下Leader，也可以对外提供服务
 
@@ -265,15 +263,10 @@ es有三种一致性参数：
 # RabbitMq
 
 ![](md\90.png)
-
-Broker:它提供一种传输服务,它的角色就是维护一条从生产者到消费者的路线，保证数据能按照指定的方式进行传输, 
 Exchange：消息交换机,它指定消息按什么规则,路由到哪个队列。 
 Queue:消息的载体,每个消息都会被投到一个或多个队列。 
 Binding:绑定，它的作用就是把exchange和queue按照路由规则绑定起来. 
 Routing Key:路由关键字,exchange根据这个关键字进行消息投递。 
-vhost:虚拟主机,一个broker里可以有多个vhost，用作不同用户的权限分离。例如默认/，可设置为/zeng/1 
-Producer:消息生产者,就是投递消息的程序. 
-Consumer:消息消费者,就是接受消息的程序. 
 
 #### 为什么使用消息队列
 
@@ -416,10 +409,6 @@ Nginx的IO通常使用epoll，epoll函数使用了I/O复用模型。与I/O阻塞
 3.当一个worker进程accept这个连接后，就开始读取请求，解析请求，处理请求，产生数据后，再返回给客户端，最后才断开连接，这样一个完成的请求就结束了
 
 ## Maven
-
-mvn clean package依次执行了clean、resources、compile、testResources、testCompile、test、jar(打包)等７个阶段。
-mvn clean install依次执行了clean、resources、compile、testResources、testCompile、test、jar(打包)、install等8个阶段。
-mvn clean deploy依次执行了clean、resources、compile、testResources、testCompile、test、jar(打包)、install、deploy等９个阶段。
 
 主要区别如下:
 package命令完成了项目编译、单元测试、打包功能，但没有把打好的可执行jar包（war包或其它形式的包）布署到本地maven仓库和远程maven私服仓库
