--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -128,6 +128,18 @@ SPI 全称为 Service Provider Interface，Dubbo 并未使用 Java 原生的 SPI
 
 Zookeeper保证CP，设计Eureka时遵守的就是AP原则。如果某台Eureka Server宕机，Eureka Client的请求会自动切换到新的Eureka Server节点，当宕机的服务器重新恢复后，Eureka会再次将其纳入到服务器集群管理之中。当节点开始接受客户端请求时，所有的操作都会进行replicateToPeer（节点间复制）操作，将请求复制到其他Eureka Server当前所知的所有节点中。 
 
+## hystrix与sentinel的区别
+
+|              | Sentinel                       | Hystrix               |
+| ------------ | ------------------------------ | --------------------- |
+| 隔离策略     | 信号量隔离（并发线程数限流）   | 线程池隔离/信号量隔离 |
+| 熔断降级策略 | 基于响应时间、异常比率、异常数 | 基于异常比率          |
+| 实时统计实现 | 滑动窗口                       | 滑动窗口              |
+
+Sentinel  信号量隔离（并发线程数限流）
+
+Hystrix    线程池隔离/信号量隔离
+
 # 分布式
 
 ## CAP理论
