--- a/分布式和海量数据处理.md
+++ b/分布式和海量数据处理.md
@@ -404,12 +404,12 @@ Exactly once——这正是人们想要的, 每一条消息只被传递一次。
 
 #### 下次面试官问我 kafka 为什么快，我就这么说
 
-partition 并行处理
-顺序写磁盘，充分利用磁盘特性
-利用了现代操作系统分页存储 Page Cache 来利用内存提高 I/O 效率
-采用了零拷贝技术
-Producer 生产的数据持久化到 broker，采用 mmap 文件映射，实现顺序的快速写入
-Customer 从 broker 读取数据，采用 sendfile，将磁盘文件读到 OS 内核缓冲区后，转到 NIO buffer进行网络发送，减少 CPU 消耗
+1、partition 并行处理
+2、顺序写磁盘，充分利用磁盘特性
+3、Broker 收到数据后，写磁盘时只是将数据写入 Page Cache，并不保证数据一定完全写入磁盘。
+4、采用了零拷贝技术
+	Producer 生产的数据持久化到 broker，采用 mmap 文件映射，实现顺序的快速写入
+	Customer 从 broker 读取数据，采用 sendfile，将磁盘文件读到 OS 内核缓冲区后，转到 NIO buffer进行网络发送，减少 CPU 消耗
 
 #### 和RabbitMq对比：
 
