--- a/网络和操作系统.md
+++ b/网络和操作系统.md
@@ -2,7 +2,7 @@
 
 ## OSI参考模型的分为哪几层，每层的功能？
 
-![äºå±ä½ç³»ç»æ](C:/Users/admin/Desktop/interview-review/md/68.png)
+![äºå±ä½ç³»ç»æ](md/68.png)
 
 #### 物理层（比特流）
 
@@ -217,7 +217,7 @@ Cookie和Session都是客户端与服务器之间保持状态的解决方案，c
 
 浏览器缓存、本地缓存-》
 
-![](C:/Users/admin/Desktop/interview-review/md/101.png)
+![](md/101.png)
 
 CDN网络是在用户和服务器之间增加Cache层（较近网络服务器），主要是通过接管DNS实现，将用户的请求引导到Cache上获得源服务器的数据，从而降低网络的访问的速度。
 
@@ -352,7 +352,7 @@ IP想象成一种高速公路，它允许其它协议在上面行驶并找到其
 
 ## TCP三次握手
 
-![ä¸æ¬¡æ¡æ](C:/Users/admin/Desktop/interview-review/md/72.png)
+![ä¸æ¬¡æ¡æ](md/72.png)
 
 ## 为什么是三次握手？
 
@@ -378,7 +378,7 @@ F 是一个 Hash 算法，根据源 IP、目的 IP、源端口、目的端口生
 
 ## SYN攻击
 
-![ä¸æ¬¡æ¡æ](C:/Users/admin/Desktop/interview-review/md/109.png)
+![ä¸æ¬¡æ¡æ](md/109.png)
 
 ### 正常流程
 
@@ -402,7 +402,7 @@ F 是一个 Hash 算法，根据源 IP、目的 IP、源端口、目的端口生
 
 ## TCP四次挥手
 
-![åæ¬¡æ¥æ](C:/Users/admin/Desktop/interview-review/md/73.png)
+![åæ¬¡æ¥æ](md/73.png)
 
 ## 为什么挥手需要四次？
 
@@ -483,9 +483,11 @@ net.ipv4.tcp_keepalive_probes=9
 
 ping通知系统建立一个固定格式的ICMP请求数据包，根据ip地址获取对方mac地址，若本机无缓存，则进行一次ARP请求和回复过程，然后封装mac到报文中，机器B收到这个数据帧后，先检查目的地址，和本机MAC地址对比符合，接收。
 
+
+
 ## Socket网络编程
 
-![åæ¬¡æ¥æ](md\110.png)
+![åæ¬¡æ¥æ](md\119.png)
 
 ## Socket网络编程和三次握手
 
