--- a/网络和操作系统.md
+++ b/网络和操作系统.md
@@ -441,6 +441,10 @@ Send-Q 表示全连接队列的最大长度；
 
 是一种系统软件，负责管理协调计算机硬件和软件资源以及为用户和程序提供服务
 
+## CPU L1, L2, L3 多级缓存的基本作用
+
+L1指令缓存用来存放已解码指令，L2缓存用来存放近期使用过的内存数据。
+
 ## 并发和并行
 
 并发:指两个或多个事件在同一时间间隔内发生。这些事件宏观上是同时发生的，但微观上是交替发生的。
@@ -452,6 +456,11 @@ Send-Q 表示全连接队列的最大长度；
 进程上下文切换：进程的上下文切换不仅包含了虚拟内存、栈、全局变量等用户空间的资源，还包括了内核堆栈、寄存器等内核空间的资源。会把交换的信息保存在进程的 PCB，当要运行另外一个进程的时候，我们需要从这个进程的 PCB 取出上下文，然后恢复到 CPU 中
 
 线程上下文切换：切换线程的私有数据、寄存器等不共享的数据；
+
+## 自旋锁与互斥锁的使用场景
+
+如果是多核处理器，如果预计线程等待锁的时间很短，短到比线程两次上下文切换时间要少的情况下，使用自旋锁是划算的。
+如果是多核处理器，如果预计线程等待锁的时间较长，至少比两次线程上下文切换的时间要长，建议使用互斥量。
 
 ## 进程空间
 
@@ -491,7 +500,11 @@ Send-Q 表示全连接队列的最大长度；
 
 ## 线程有几种状态？进程有哪几种状态？
 
-进程：
+进程状态：
+
+一般来说，进程有三个状态，即就绪状态，[运行状态](http://baike.baidu.com/subview/1730379/1730379.htm)，阻塞状态。
+
+线程：
 
 ![1574478626805](md/115.png)
 
